--- a/Python/Clase_00/Estadistica_Mobility_Google.ipynb
+++ b/Python/Clase_00/Estadistica_Mobility_Google.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +78,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_region_code</th>\n",
+       "      <th>country_region</th>\n",
+       "      <th>sub_region_1</th>\n",
+       "      <th>sub_region_2</th>\n",
+       "      <th>metro_area</th>\n",
+       "      <th>iso_3166_2_code</th>\n",
+       "      <th>census_fips_code</th>\n",
+       "      <th>place_id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>retail_and_recreation_percent_change_from_baseline</th>\n",
+       "      <th>grocery_and_pharmacy_percent_change_from_baseline</th>\n",
+       "      <th>parks_percent_change_from_baseline</th>\n",
+       "      <th>transit_stations_percent_change_from_baseline</th>\n",
+       "      <th>workplaces_percent_change_from_baseline</th>\n",
+       "      <th>residential_percent_change_from_baseline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AE</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJvRKrsd9IXj4RpwoIwFYv0zM</td>\n",
+       "      <td>2020-02-15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AE</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJvRKrsd9IXj4RpwoIwFYv0zM</td>\n",
+       "      <td>2020-02-16</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AE</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJvRKrsd9IXj4RpwoIwFYv0zM</td>\n",
+       "      <td>2020-02-17</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AE</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJvRKrsd9IXj4RpwoIwFYv0zM</td>\n",
+       "      <td>2020-02-18</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AE</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ChIJvRKrsd9IXj4RpwoIwFYv0zM</td>\n",
+       "      <td>2020-02-19</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  country_region_code        country_region sub_region_1 sub_region_2  \\\n",
+       "0                  AE  United Arab Emirates          NaN          NaN   \n",
+       "1                  AE  United Arab Emirates          NaN          NaN   \n",
+       "2                  AE  United Arab Emirates          NaN          NaN   \n",
+       "3                  AE  United Arab Emirates          NaN          NaN   \n",
+       "4                  AE  United Arab Emirates          NaN          NaN   \n",
+       "\n",
+       "  metro_area iso_3166_2_code  census_fips_code                     place_id  \\\n",
+       "0        NaN             NaN               NaN  ChIJvRKrsd9IXj4RpwoIwFYv0zM   \n",
+       "1        NaN             NaN               NaN  ChIJvRKrsd9IXj4RpwoIwFYv0zM   \n",
+       "2        NaN             NaN               NaN  ChIJvRKrsd9IXj4RpwoIwFYv0zM   \n",
+       "3        NaN             NaN               NaN  ChIJvRKrsd9IXj4RpwoIwFYv0zM   \n",
+       "4        NaN             NaN               NaN  ChIJvRKrsd9IXj4RpwoIwFYv0zM   \n",
+       "\n",
+       "         date  retail_and_recreation_percent_change_from_baseline  \\\n",
+       "0  2020-02-15                                                0.0    \n",
+       "1  2020-02-16                                                1.0    \n",
+       "2  2020-02-17                                               -1.0    \n",
+       "3  2020-02-18                                               -2.0    \n",
+       "4  2020-02-19                                               -2.0    \n",
+       "\n",
+       "   grocery_and_pharmacy_percent_change_from_baseline  \\\n",
+       "0                                                4.0   \n",
+       "1                                                4.0   \n",
+       "2                                                1.0   \n",
+       "3                                                1.0   \n",
+       "4                                                0.0   \n",
+       "\n",
+       "   parks_percent_change_from_baseline  \\\n",
+       "0                                 5.0   \n",
+       "1                                 4.0   \n",
+       "2                                 5.0   \n",
+       "3                                 5.0   \n",
+       "4                                 4.0   \n",
+       "\n",
+       "   transit_stations_percent_change_from_baseline  \\\n",
+       "0                                            0.0   \n",
+       "1                                            1.0   \n",
+       "2                                            1.0   \n",
+       "3                                            0.0   \n",
+       "4                                           -1.0   \n",
+       "\n",
+       "   workplaces_percent_change_from_baseline  \\\n",
+       "0                                      2.0   \n",
+       "1                                      2.0   \n",
+       "2                                      2.0   \n",
+       "3                                      2.0   \n",
+       "4                                      2.0   \n",
+       "\n",
+       "   residential_percent_change_from_baseline  \n",
+       "0                                       1.0  \n",
+       "1                                       1.0  \n",
+       "2                                       1.0  \n",
+       "3                                       1.0  \n",
+       "4                                       1.0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# \n",
     "Mobility = pd.read_csv('https://www.gstatic.com/covid19/mobility/Global_Mobility_Report.csv', encoding = 'utf-8')\n",
